test/testdata/classes/methods/properties/setter_too_many_params_error.lox
class Foo {
    get bar() {}

    // error: property setter can only have one parameter
    set bar(x, y) {
        _ = x;
        _ = y;
    }
}

_ = Foo; // suppress unused declaration error
